@@ -338,8 +338,9 @@ class MusicImplements implements Runnable{
         
         processList = new ArrayList<String>();
 		try {
-			Logger.getLogger(MusicImplements.class).info("cd "+p.getProperty("videoPath")+";ls "+id+"\\*"); 
-			Process pro = Runtime.getRuntime().exec("cd "+p.getProperty("videoPath")+";ls "+id+"*");
+			//Logger.getLogger(MusicImplements.class).info("cd "+p.getProperty("videoPath")+";ls "+id+"\\*"); 
+			//Process pro = Runtime.getRuntime().exec("cd "+p.getProperty("videoPath")+";ls "+id+"*");
+			Process pro = Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c","ls"+id+"*  " }) ;
 			pro.waitFor();
 			BufferedReader input = new BufferedReader(new InputStreamReader(pro.getInputStream()));
 			String line = "";
